[#166563283] Books feature completed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
 
   web:
     build: .
+    entrypoint: /app/docker-entrypoint.sh
     command: mix phx.server
     volumes:
       - .:/app
